tests/should_succeed/passtest.jou
import "stdlib/io.jou"

def main() -> int:
    a = 114514
    if (a == 114514):
        pass
    else:
        puts("wat?")
    return 0
