tests/syntax_error/triple_not_equals.jou
import "stdlib/io.jou"

def main() -> int:
    if 1 !== 2:  # Error: use '!=' instead of '!=='
        puts("hey")
    return 0
